WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116101
[BlackBerry] Handle network errors when starting a new job
https://bugs.webkit.org/show_bug.cgi?id=116101
Summary
[BlackBerry] Handle network errors when starting a new job
Carlos Garcia Campos
Reported
2013-05-14 05:34:13 PDT
NetworkManager::startJob() returns true/false, but the result value is not handled.
Attachments
Patch
(11.50 KB, patch)
2013-05-14 05:42 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-05-14 05:42:52 PDT
Created
attachment 201704
[details]
Patch
Rob Buis
Comment 2
2013-05-14 08:57:06 PDT
Comment on
attachment 201704
[details]
Patch Looks good.
WebKit Commit Bot
Comment 3
2013-05-14 10:53:13 PDT
Comment on
attachment 201704
[details]
Patch Clearing flags on attachment: 201704 Committed
r150076
: <
http://trac.webkit.org/changeset/150076
>
WebKit Commit Bot
Comment 4
2013-05-14 10:53:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug